# Bug-Game

./: .clang-tidy  .gitignore  Bug_Game  CMakeLists.txt  GitLog.txt  Ideas.txt  Out.txt  PlanetNames.txt  Planets.txt  ThreeCluster_b.txt  build.sh  main.cpp  test  test.cpp
data/: difficulty_config.json
data/init/: init_data.json
data/name_generation/: TwoConsonantClusterEndVowelRequired.txt  TwoConsonantClusterNoEndVowelRequired.txt  TwoConsonantClusterStarters.txt
include/: GameDifficulty.hpp  NameGenerators.hpp  Planet.hpp  PlanetSystemGenerator.hpp  Simulator.hpp
include/Menus/: MainMenu.hpp  SectorMapViewMenu.hpp
include/Sector/: Sector.hpp  SectorMapGenerator.hpp  StructureTickHandler.hpp
include/SectorStructures/: OreMine.hpp  SectorStructure.hpp
src/: NameGenerators.cpp  PlanetSystemGenerator.cpp  Simulator.cpp
src/Menus/: MainMenu.cpp  SectorMapViewMenu.cpp
src/Sector/: SectorMapGenerator.cpp
src/SectorStructures/: OreMine.cpp  SectorStructure.cpp
